crates/ty_server/tests/e2e/snapshots/e2e__tsp__get_type_annotated_variable.snap
---
source: crates/ty_server/tests/e2e/tsp.rs
expression: annotated_var_result
---
{
  "aliasName": null,
  "category": 0,
  "categoryFlags": 0,
  "flags": 8,
  "handle": "type_int",
  "name": "int"
}
