crates/ty_server/tests/e2e/snapshots/e2e__tsp__get_type_attribute_access.snap
---
source: crates/ty_server/tests/e2e/tsp.rs
expression: attribute_result
---
{
  "aliasName": null,
  "category": 5,
  "categoryFlags": 0,
  "flags": 0,
  "handle": "type_Union",
  "name": "Union"
}
