crates/ty_server/tests/e2e/snapshots/e2e__tsp__get_type_class_definition.snap
---
source: crates/ty_server/tests/e2e/tsp.rs
expression: class_def_result
---
{
  "aliasName": null,
  "category": 3,
  "categoryFlags": 0,
  "flags": 1,
  "handle": "type_tuple",
  "name": "tuple"
}
